--- a/index.html
+++ b/index.html
@@ -2,5 +2,14 @@
 layout: default
 ---
 
+<div class="hero">
+    <div class="logo">
+        <svg viewBox="0 0 1000 250">
+            <use xlink:href="/images/icon.svg#logo"></use>
+        </svg>
+    </div>
+</div>
+
+
 <h1>Androdes</h1>
 <p>Coming Soon</p>
