--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@ layout: default
 ---
 
 <div class="hero">
-    <div class="logo">
-        <svg viewBox="0 0 1000 250">
-            <use xlink:href="/images/icon.svg#logo"></use>
+    <div class="logo-wrapper">
+        <svg viewBox="0 0 1000 250" class="logo">
+            <use xlink:href="/images/logo.svg#logo"></use>
+        </svg>
+        <svg viewBox="0 0 1000 250" class="pulse logo">
+            <use xlink:href="/images/logo.svg#logo"></use>
         </svg>
     </div>
 </div>
-
-
-<h1>Androdes</h1>
-<p>Coming Soon</p>
